--- a/src/app/guest-event/guest-event.component.html
+++ b/src/app/guest-event/guest-event.component.html
@@ -1,1 +1,34 @@
-<p>guest-event works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="card" >
+                    <button type="button" class="btn btn-primary" (click)="joinNow(EventDetails._id)">Join Now
+                        </button>
+                <div [ngStyle]="{background: getSrc(EventDetails.eventTheme)}" class="theme-background">
+                    <div class="row">
+                        <div class="col-4 m-auto">
+                            <img *ngIf="EventDetails && EventDetails.profilePhoto" src="{{path}}{{EventDetails.profilePhoto}}" class="rounded-circle img-fluid">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center pt-4">
+                            <p>EventType:-
+                                <span>{{EventDetails.eventType}}</span>
+                            </p>
+                        </div>
+                        <div class="col text-center pt-4">
+                            <p>EventTitle:-
+                                <span>{{EventDetails.eventTitle}}</span>
+                            </p>
+                        </div>
+                        <div class="col text-center pt-4">
+                            <p>EventHashTag:-
+                                <span>{{EventDetails.hashTag}}</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
