--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -1,1 +1,39 @@
-<p>my-cart works!</p>
+<div class="container">
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th>Activity Name</th>
+                <th>Group Name</th>
+                <th>Gender</th>
+                <th>Item Name</th>
+                <th class="product-price">Item Price</th>
+                <th class="product-quantity">Quantity</th>
+                <th></th>
+                <th class="product-line-price">Total</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let products of cartDetails" class="product" ng-init="count = 0">
+                <td>{{products.activityName}}</td>
+                <td>{{products.groupName}}</td>
+                <td>{{products.gender}}</td>
+                <td>{{products.itemName}}</td>
+                <td class="product-price">{{products.itemPrice}}</td>
+                <td class="product-quantity">
+                    <input type="number"  min="1" [(ngModel)]="products.quantity">
+                </td>
+                <td>
+                    <button type="button" class="btn btn-danger">Remove
+                    </button>
+                </td>
+                <td ng-init="count = (count + (products.itemPrice * products.quantity))">{{products.itemPrice * products.quantity }}</td>
+            </tr>
+            <tr>
+                <td colspan="7">Grand Total</td>
+                <td>
+                    {{count}}
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
